--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,37 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+/* HerpPage-CSS */
+
+.hero-cards {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 35%;
+  display: flex;
+  justify-content: center;
+  gap:1rem;
+  background: red;
+  }
+
+  .hero-cards .card {
+    flex: 1;
+    position: relative;
+    aspect-ratio: 5/7;
+    padding: 0.75rem;
+    border-radius: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: red;
+  }
+
+  .card-title{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+  }
