--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,39 +22,52 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'PPNeueMachina-PlainLight' ;
 }
 
 
-/* HerpPage-CSS */
 
-.hero-cards {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 35%;
-  display: flex;
-  justify-content: center;
-  gap:1rem;
-  background: red;
-  }
+  
+@font-face {
+  font-family: 'PPNeueMachina'; 
+  src: url('../fonts/660bace5102a0fd4b7cf151f_PPNeueMachina-PlainBold.ttf') format('truetype'); /* Path to your font file */
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'samsungsharpsans'; 
+  src: url('../fonts/660bace533b3c65b4b6e2f57_samsungsharpsans.otf') format('truetype'); /* Path to your font file */
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'PPNeueMachina-PlainSemibold'; 
+  src: url('../fonts/660bace544b9468ed530c7e5_PPNeueMachina-PlainSemibold.ttf') format('truetype'); /* Path to your font file */
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'PPNeueMachina-PlainMedium'; 
+  src: url('../fonts/660bace59a18dca6d291b917_PPNeueMachina-PlainMedium.ttf') format('truetype'); /* Path to your font file */
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'PPNeueMachina-PlainLight'; 
+  src: url('../fonts/660bace5c434256e0adb2e47_PPNeueMachina-PlainLight.ttf') format('truetype'); /* Path to your font file */
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'samsungsharpsans-bold'; 
+  src: url('../fonts/660bace5ed884dfc4add12ff_samsungsharpsans-bold.otf') format('truetype'); /* Path to your font file */
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'samsungsharpsans-medium'; 
+  src: url('../fonts/660bace9e29efc201cddf51f_samsungsharpsans-medium.otf') format('truetype'); /* Path to your font file */
+  font-weight: normal;
+  font-style: normal;
+}
 
-  .hero-cards .card {
-    flex: 1;
-    position: relative;
-    aspect-ratio: 5/7;
-    padding: 0.75rem;
-    border-radius: 0.5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: red;
-  }
-
-  .card-title{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-
-  }
