--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@
 }
 
 body {
-  background: #181818;
+  background: #ffffff;
   color: var(--foreground);
   font-family: 'PPNeueMachina-PlainLight' ;
 
